clients/atlas-tui/tests/snapshots/golden_terminal__a_child_that_ended_says_so_where_the_keys_were.snap
---
source: tests/golden_terminal.rs
expression: frame
---
"┌ ▌ ATLAS ─────────────────────────────────────────────────────────── qlab cli ┐"
"│the desk is up on :8765                                                       │"
"│> what changed in the regime read?                                            │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ `qlab cli` ended on its own · /cli starts another ───────────────────────────┘"
