clients/atlas-tui/tests/snapshots/golden_terminal__a_focused_pane_says_the_child_types_and_names_the_key_back.snap
---
source: tests/golden_terminal.rs
expression: frame
---
"┌ ▌ ATLAS ─────────────────────────────────────────────────────────── qlab cli ┐"
"│the desk is up on :8765                                                       │"
"│> what changed in the regime read?                                            │"
"│█                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ the keyboard is Claude's · ctrl-] returns it ────────────────────────────────┘"
