clients/atlas-tui/tests/snapshots/golden_terminal__a_narrow_terminal_gets_a_whole_sentence_rather_than_a_clipped_one.snap
---
source: tests/golden_terminal.rs
expression: frame
---
"┌ ▌ ATLAS ──────────────────────── qlab cli ┐"
"│the desk is up on :8765                    │"
"│> what changed in the regime read?         │"
"│                                           │"
"│                                           │"
"│                                           │"
"│                                           │"
"└ desk's keyboard · i or click to give it ──┘"
