clients/atlas-tui/tests/snapshots/golden_terminal__the_pane_draws_the_childs_own_lines_inside_the_border.snap
---
source: tests/golden_terminal.rs
expression: frame
---
"┌ ▌ ATLAS ─────────────────────────────────────────────────────────── qlab cli ┐"
"│the desk is up on :8765                                                       │"
"│> what changed in the regime read?                                            │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ the keyboard is the desk's · i or click to give it to Claude ────────────────┘"
